bugfix: scrolled down page was too wide on mobile

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -239,7 +239,6 @@ div[class^="announcementBarContent"] {
 .navbar-sidebar {
   --ifm-navbar-sidebar-width: 100vw;
   --ifm-navbar-background-color: white;
-  transform: translate3d(100%, 0, 0);
 }
 
 /* larger mobile menu items */
